--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
           </a>
         </div>
        <div class="col-sm-4">
-          <a class="student-tile" id ="student4" href="">
-            <span>student4</span>
+          <a class="student-tile" id ="testing" href="">
+            <span>Team 4</span>
           </a>
         </div>
        <div class="col-sm-4">
